--- a/output.css
+++ b/output.css
@@ -544,9 +544,135 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.bg-black {
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-\[560px\] {
+  height: 560px;
+}
+
+.h-\[60px\] {
+  height: 60px;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-2\/4 {
+  width: 50%;
+}
+
+.w-\[300px\] {
+  width: 300px;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
+.rounded-mobile {
+  border-radius: 0% 0% 100% 0% / 0% 0% 35% 0% ;
+}
+
+.rounded-b-3xl {
+  border-bottom-right-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+}
+
+.rounded-b-md {
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+
+.rounded-b-xl {
+  border-bottom-right-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem;
+}
+
+.rounded-t-3xl {
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
+}
+
+.bg-lightGrayishViolet {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: hsl(270 20% 96% / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-lightMagenta {
+  --tw-gradient-from: hsl(293, 100%, 63%) var(--tw-gradient-from-position);
+  --tw-gradient-to: hsl(293 100% 63% / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-lightViolet {
+  --tw-gradient-from: hsl(264, 100%, 61%) var(--tw-gradient-from-position);
+  --tw-gradient-to: hsl(264 100% 61% / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-lightMagenta {
+  --tw-gradient-to: hsl(293, 100%, 63%) var(--tw-gradient-to-position);
+}
+
+.to-lightViolet {
+  --tw-gradient-to: hsl(264, 100%, 61%) var(--tw-gradient-to-position);
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .text-center {
