--- a/output.css
+++ b/output.css
@@ -561,61 +561,104 @@ video {
   margin-right: auto;
 }
 
-.mt-24 {
-  margin-top: 6rem;
+.mb-0 {
+  margin-bottom: 0px;
 }
 
-.mb-6 {
-  margin-bottom: 1.5rem;
+.mb-0\.5 {
+  margin-bottom: 0.125rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .mb-4 {
   margin-bottom: 1rem;
 }
 
-.h-6 {
-  height: 1.5rem;
+.ml-auto {
+  margin-left: auto;
 }
 
-.h-\[560px\] {
-  height: 560px;
+.mt-24 {
+  margin-top: 6rem;
 }
 
-.h-\[60px\] {
-  height: 60px;
+.flex {
+  display: flex;
+}
+
+.h-4 {
+  height: 1rem;
 }
 
 .h-5 {
   height: 1.25rem;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-7 {
+  height: 1.75rem;
+}
+
+.h-\[560px\] {
+  height: 560px;
+}
+
 .w-1\/2 {
   width: 50%;
 }
 
-.w-2\/4 {
-  width: 50%;
+.w-3\/5 {
+  width: 60%;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-7 {
+  width: 1.75rem;
 }
 
 .w-\[300px\] {
   width: 300px;
 }
 
-.w-5 {
-  width: 1.25rem;
+.items-center {
+  align-items: center;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .rounded-3xl {
   border-radius: 1.5rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-mobile {
   border-radius: 0% 0% 100% 0% / 0% 0% 35% 0% ;
 }
 
-.rounded-b-3xl {
-  border-bottom-right-radius: 1.5rem;
-  border-bottom-left-radius: 1.5rem;
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 
 .rounded-b-md {
@@ -633,6 +676,24 @@ video {
   border-top-right-radius: 1.5rem;
 }
 
+.rounded-bl-md {
+  border-bottom-left-radius: 0.375rem;
+}
+
+.border-2 {
+  border-width: 2px;
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.bg-grayishBlue {
+  --tw-bg-opacity: 1;
+  background-color: hsl(206 6% 79% / var(--tw-bg-opacity));
+}
+
 .bg-lightGrayishViolet {
   --tw-bg-opacity: 1;
   background-color: hsl(270 20% 96% / var(--tw-bg-opacity));
@@ -641,6 +702,18 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-grayishBlue\/50 {
+  background-color: hsl(206 6% 79% / 0.5);
+}
+
+.bg-grayishBlue\/20 {
+  background-color: hsl(206 6% 79% / 0.2);
+}
+
+.bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
 }
 
 .bg-gradient-to-b {
@@ -671,19 +744,66 @@ video {
   --tw-gradient-to: hsl(264, 100%, 61%) var(--tw-gradient-to-position);
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .p-3 {
   padding: 0.75rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
 }
 
 .text-center {
   text-align: center;
 }
 
+.text-\[0\.8rem\] {
+  font-size: 0.8rem;
+}
+
+.text-\[10px\] {
+  font-size: 10px;
+}
+
 .text-\[11px\] {
   font-size: 11px;
+}
+
+.text-\[9px\] {
+  font-size: 9px;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .text-blue-700 {
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+
+.text-moderateViolet {
+  --tw-text-opacity: 1;
+  color: hsl(276 55% 52% / var(--tw-text-opacity));
+}
+
+.text-paleViolet {
+  --tw-text-opacity: 1;
+  color: hsl(276 100% 81% / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.background {
 }
