--- a/output.css
+++ b/output.css
@@ -569,6 +569,10 @@ video {
   margin-bottom: 0.125rem;
 }
 
+.mb-14 {
+  margin-bottom: 3.5rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -593,40 +597,32 @@ video {
   margin-left: auto;
 }
 
-.mt-24 {
-  margin-top: 6rem;
-}
-
-.mt-40 {
-  margin-top: 10rem;
-}
-
-.mt-36 {
-  margin-top: 9rem;
-}
-
-.mt-32 {
-  margin-top: 8rem;
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .mt-28 {
   margin-top: 7rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
 .mb-24 {
   margin-bottom: 6rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
-.mb-14 {
-  margin-bottom: 3.5rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .flex {
@@ -661,6 +657,10 @@ video {
   height: 560px;
 }
 
+.h-\[80vh\] {
+  height: 80vh;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -675,6 +675,10 @@ video {
 
 .w-4 {
   width: 1rem;
+}
+
+.w-4\/5 {
+  width: 80%;
 }
 
 .w-6 {
@@ -706,9 +710,17 @@ video {
   max-width: 55%;
 }
 
+.max-w-\[340px\] {
+  max-width: 340px;
+}
+
 .rotate-180 {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .items-center {
@@ -885,6 +897,10 @@ video {
   font-size: 11px;
 }
 
+.text-\[40px\] {
+  font-size: 40px;
+}
+
 .text-\[9px\] {
   font-size: 9px;
 }
@@ -899,40 +915,30 @@ video {
   line-height: 1rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-\[40px\] {
-  font-size: 40px;
+.font-\[600\] {
+  font-weight: 600;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
-.font-\[700\] {
-  font-weight: 700;
+.font-\[500\] {
+  font-weight: 500;
 }
 
-.font-\[600\] {
-  font-weight: 600;
+.leading-loose {
+  line-height: 2;
 }
 
 .text-blue-700 {
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+
+.text-darkGrayishViolet {
+  --tw-text-opacity: 1;
+  color: hsl(270 7% 64% / var(--tw-text-opacity));
 }
 
 .text-grayishBlue {
@@ -950,19 +956,14 @@ video {
   color: hsl(276 100% 81% / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-veryDarkDesaturatedViolet {
   --tw-text-opacity: 1;
   color: hsl(271 36% 24% / var(--tw-text-opacity));
 }
 
-.text-darkGrayishViolet {
+.text-white {
   --tw-text-opacity: 1;
-  color: hsl(270 7% 64% / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .shadow-2xl {
@@ -982,4 +983,50 @@ video {
   padding: 0px;
   box-sizing: border-box;
   font-family: "Rubik", sans-serif;
+}
+
+@media (min-width: 768px) {
+  .md\:ml-0 {
+    margin-left: 0px;
+  }
+
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:w-full {
+    width: 100%;
+  }
+
+  .md\:max-w-\[200px\] {
+    max-width: 200px;
+  }
+
+  .md\:max-w-\[600px\] {
+    max-width: 600px;
+  }
+
+  .md\:max-w-\[500px\] {
+    max-width: 500px;
+  }
+
+  .md\:max-w-\[400px\] {
+    max-width: 400px;
+  }
+
+  .md\:items-center {
+    align-items: center;
+  }
+
+  .md\:justify-center {
+    justify-content: center;
+  }
+
+  .md\:rounded-desktop {
+    border-radius: 0% 0% 45% 40% / 0% 0% 25% 14% ;
+  }
+
+  .md\:text-left {
+    text-align: left;
+  }
 }
