--- a/output.css
+++ b/output.css
@@ -698,6 +698,10 @@ video {
   max-width: 55%;
 }
 
+.max-w-\[600px\] {
+  max-width: 600px;
+}
+
 .rotate-180 {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -970,6 +974,14 @@ video {
 }
 
 @media (min-width: 1060px) {
+  .md\:right-\[-20px\] {
+    right: -20px;
+  }
+
+  .md\:left-\[-20px\] {
+    left: -20px;
+  }
+
   .md\:flex {
     display: flex;
   }
@@ -995,7 +1007,7 @@ video {
   }
 
   .md\:rounded-desktop {
-    border-radius: 0% 0% 45% 40% / 0% 0% 25% 14% ;
+    border-radius: 0% 0% 60% 40% / 0% 0% 35% 16%  ;
   }
 
   .md\:text-left {
